# kedro-semantic-layer

./: Dockerfile  pyproject.toml
examples/airlines/: README.md  pyproject.toml  query.tape  query.webm  requirements.txt
examples/airlines/conf/base/: catalog.yml
examples/airlines/src/airlines/: __init__.py  __main__.py  settings.py
src/kedro_semantic_layer/: __init__.py  plugin.py
