[project]
name = "kedro-semantic-layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boring-semantic-layer",
    "kedro>=0.19.7",
]

[project.scripts]
kedro-semantic-layer = "kedro_semantic_layer:main"

[project.entry-points."kedro.hooks"]
kedro-semantic-layer = "kedro_semantic_layer.plugin:hooks"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "examples/airlines",
]

[tool.uv.sources]
airlines = { workspace = true }
boring-semantic-layer = { git = "https://github.com/boringdata/boring-semantic-layer.git", branch = "feat/bsl-v2-new-features" }

[dependency-groups]
dev = [
    "airlines",
]
